2012-12-10  Noel Gordon  <noel.gordon@gmail.com>

        [chromium] Unreviewed gardening
        https://bugs.webkit.org/show_bug.cgi?id=84432

        fast/filesystem/op-restricted-names.html
        fast/filesystem/op-restricted-unicode.html
        fast/filesystem/read-directory.html
        fast/filesystem/simple-readonly-file-object.html

        * platform/chromium/TestExpectations: These have been passing on WIN for over a month.

2012-12-10  Christophe Dumez  <christophe.dumez@intel.com>

        Unreviewed EFL gardening.

        Mark new compositing/repaint/resize-repaint.html test introduced in
        r137215 as failing on EFL WK2.

        * platform/efl-wk2/TestExpectations:

2012-12-10  Christophe Dumez  <christophe.dumez@intel.com>

        Unreviewed EFL gardening.

        Rebaseline fast/js/global-constructors.html after r137243.

        * platform/efl/fast/js/global-constructors-expected.txt:

2012-12-10  Noel Gordon  <noel.gordon@gmail.com>

        [chromium] Unreviewed gardening

        Mark platform/chromium/virtual/deferred/fast/images/pdf-as-image-landscape.html WontFix.

        * platform/chromium/TestExpectations:

2012-12-10  Noel Gordon  <noel.gordon@gmail.com>

        [chromium] Unreviewed gardening: rebase fast/repaint/body-background-image.html on linux

        * platform/chromium/TestExpectations:

2012-12-10  Noel Gordon  <noel.gordon@gmail.com>

        [chromium] Unreviewed gardening: rebase fast/text/font-initial.html on linux

        * platform/chromium-linux/fast/text/font-initial-expected.png: Added.
        * platform/chromium/TestExpectations:

2012-12-10  No'am Rosenthal  <noam@webkit.org>

        REGRESSION (r137006): CSS clip on solid color composited div broken
        https://bugs.webkit.org/show_bug.cgi?id=104604

        Reviewed by Simon Fraser.

        Added a new test (by Simon Fraser) to make sure background color doesn't break clipping.

        * compositing/geometry/clip-inside-expected.txt: Added.